--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Etch-A-Sketch</title>
+    <link rel="stylesheet" href="css/style.css">
+    <script src="js/javascript.js" defer></script>
 </head>
 <body>
-    
+    <main>
+        <div class="left-side">
+            <img src="img/logo.png" alt="Logo of Etch-A-Sketch">
+        </div>
+        <div class="right-side">
+        </div>
+    </main>
 </body>
 </html>
