--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
             <img src="img/logo.png" alt="Logo of Etch-A-Sketch">
         </div>
         <div class="right-side">
+            <div class="etch-a-sketch">
+                
+            </div>
         </div>
     </main>
 </body>
