--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
     <main>
         <div class="left-side">
             <img src="img/logo.png" alt="Logo of Etch-A-Sketch">
+            <button id="btn">New Grid</button>
         </div>
         <div class="right-side">
             <div class="etch-a-sketch">
-                
+
             </div>
         </div>
     </main>
